refactor(util): 重构OSS工具类以提升代码复用性和健壮性
- 修复 URL 过时 API
- 引入 OssUtils 统一封装HTTP连接逻辑，替换原有重复代码
- 使用 URI.toURL 替代直接 URL 构造，增强URL解析安全性
- 移除冗余的 Apache HttpClient 依赖，统一使用 HttpURLConnection
- 优化图片加载与处理方法，改进异常捕获和资源管理
- 更新平台版本至2025.2 并调整构建配置
- 简化哈希计算方法签名，移除不必要的异常声明
- 使用现代Java语法（如钻石操作符）提高代码简洁性